--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bitcoin_ticker
+name: coin_watcher
 description: A new Flutter application.
 version: 1.0.0+1
 environment:
@@ -15,7 +15,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   intl: ^0.16.1
   deep_collection: ^0.1.5+1
-  fl_chart: ^0.12.1
+  fl_chart: ^0.12.2
   crypto_font_icons: 0.1.0
 
 
